2010-06-13  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-write-and-encrypt): fix arguments
	of `epg-context-set-progress-callback' because of the difference
	between EasyPG 0.0.16 and that included in Emacs23.

2010-06-12  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix bugs.
	(twittering-hmac-sha1): remove invalid arguments.
	(twittering-oauth-auth-str): correct a variable.

	* twittering-mode.el: Support master password for storing private
	information in an encrypted file.
	(twittering-use-master-password): new variable.
	(twittering-private-info-file): new variable.
	(twittering-variables-stored-with-encryption): new variable.
	(twittering-load-private-info): new function.
	(twittering-load-private-info-with-guide): new function.
	(twittering-save-private-info): new function.
	(twittering-save-private-info-with-guide): new function.
	(twittering-capable-of-encryption-p): new function.
	(twittering-read-from-encrypted-file): new function.
	(twittering-write-and-encrypt): new function.
	(twittering-verify-credentials): support master password.

	* twittering-mode.el: Add codes for debugging functions for
	OAuth.
	(twittering-oauth-get-token-alist-url): add codes for debug.
	(twittering-oauth-get-token-alist-native): likewise.
	(twittering-oauth-get-token-alist-curl): likewise.

2010-06-09  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-oauth-get-access-token): reject
	invalid PIN code input and strip extra white spaces.

2010-06-05  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: confirm that a valid access token has been
	retrieved.
	(twittering-oauth-make-response-alist): do not decode a null entry.
	(twittering-verify-credentials): confirm that the retrieved
	`token-alist' is valid as an access token.

2010-06-04  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el: removed (set-terminal-coding-system 'utf-8)
	(twittering-mode-map): changed key bindings: